<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/parent_bg_color2"
    tools:context=".kilometerCover">



    <TextView
        android:id="@+id/motivation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/game_on"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"

        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="369dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:fontFamily="cursive"
        android:text="@string/motivate"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motivation" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="358dp"
        android:layout_height="85dp"
        android:layout_marginTop="36dp"
        android:text="@string/kmText"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/tuesday"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <EditText
        android:id="@+id/tuesdayKilo"
        android:layout_width="85dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/kmhint"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView9"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="@+id/textView9"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="87dp"
        android:layout_height="20dp"
        android:text="@string/km"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tuesdayKilo"
        app:layout_constraintTop_toTopOf="@+id/tuesdayKilo"
        app:layout_constraintVertical_bias="0.066" />

    <TextView
        android:id="@+id/thurdaytext"
        android:layout_width="87dp"
        android:layout_height="48dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:text="@string/thursday"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:visibility="visible"
        android:backgroundTint="@color/white"

        android:id="@+id/thurdayKilo"
        android:layout_width="85dp"
        android:layout_height="56dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:hint="@string/kmhint"
        android:inputType="numberDecimal"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/thurdaytext"
        app:layout_constraintStart_toEndOf="@+id/thurdaytext"
        app:layout_constraintTop_toTopOf="@+id/thurdaytext"
        app:layout_constraintVertical_bias="1.0" />


<!--    <com.google.android.material.textfield.TextInputLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Enter your email"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/thurdaytext"-->
<!--        app:layout_constraintStart_toEndOf="@+id/thurdaytext"-->
<!--        app:layout_constraintTop_toTopOf="@+id/thurdaytext">-->

<!--        <com.google.android.material.textfield.TextInputEditText-->
<!--            android:id="@+id/editText"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:inputType="textEmailAddress" />-->
<!--    </com.google.android.material.textfield.TextInputLayout>-->


    <TextView

        android:id="@+id/textView14"
        android:layout_width="87dp"
        android:layout_height="20dp"
        android:text="@string/km"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/thurdayKilo"
        app:layout_constraintTop_toTopOf="@+id/thurdayKilo"
        app:layout_constraintVertical_bias="0.066" />

    <Button
        android:id="@+id/calculate"
        android:backgroundTint="@color/sky_blue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

</androidx.constraintlayout.widget.ConstraintLayout>